--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
   "files.associations": {
     "xiosbase": "c",
     "xlocale": "c",
-    "xutility": "c"
+    "xutility": "c",
+    "windows.h": "c"
   }
 }
