Added error handling, skipping implementation of timeout and turning off flags (unnecessary, may implement later)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "xiosbase": "c",
     "xlocale": "c",
     "xutility": "c",
-    "windows.h": "c"
+    "windows.h": "c",
+    "stdio.h": "c"
   }
 }
