Remapping CTRL + q to terminate the process. Seems like I don't need to disable whatever signal Ctrl + q is sending before remapping it?

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,8 @@
     "xutility": "c",
     "windows.h": "c",
     "stdio.h": "c"
-  }
+  },
+  "terminal.integrated.commandsToSkipShell": [
+  "-workbench.action.quickOpenView"
+]
 }
